Fix landing page positioning on mobile

--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ a {
   background-color: rgba(94, 83, 83, 0.5);
   width: 80%;
   height: 100%;
-  margin: 1rem;
+  margin: 1rem auto;
   padding: 1rem;
 }
 
